<?xml version="1.0"?>
<package format="2">
  <name>barulic_rviz_plugins</name>
  <version>0.0.0</version>
  <description>The barulic_rviz_plugins package. Battery icons made by Freepik (https://www.flaticon.com/authors/freepik) from https://www.flaticon.com.</description>

  <maintainer email="matthew.barulic@gmail.com">Matthew Barulic</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <depend>rviz</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
